// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardEmptyScreen renders correctly with edit mode 1`] = `
<div
  class="dshEmptyPromptParent"
>
  <div
    class="euiPageTemplate dshEmptyPromptPageTemplate emotion-euiPageOuter-row-grow"
    data-test-subj="emptyDashboardWidget"
    style="min-block-size: 460px; padding-block-start: var(--euiFixedHeadersOffset, 0);"
  >
    <main
      class="emotion-euiPageInner"
      id="EuiPageTemplateInner_generated-id"
    >
      <section
        class="emotion-euiPageSection-grow-l-center-transparent"
      >
        <div
          class="emotion-euiPageSection__content-l-center"
        >
          <div
            class="euiPanel euiPanel--transparent euiEmptyPrompt dshEmptyWidgetContainer emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
          >
            <div
              class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
            >
              <div
                class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
              >
                <figure
                  class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
                >
                  <img
                    alt=""
                    class="euiImage emotion-euiImage-fullWidth"
                    src="/plugins/dashboard/assets/dashboards_light.svg"
                  />
                </figure>
              </div>
              <div
                class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
              >
                <h2
                  class="euiTitle emotion-euiTitle-xs"
                >
                  This dashboard is empty. Let’s fill it up!
                </h2>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <div
                    class="euiText emotion-euiText-s-euiTextColor-subdued"
                  >
                    <span>
                      Create a visualization of your data, or add one from the library.
                    </span>
                  </div>
                </div>
                <div
                  class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
                />
                <div
                  class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-center-row"
                >
                  <div
                    class="euiFlexItem emotion-euiFlexItem-growZero"
                  >
                    <button
                      class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
                      type="button"
                    >
                      <span
                        class="emotion-euiButtonDisplayContent"
                      >
                        <span
                          color="inherit"
                          data-euiicon-type="lensApp"
                        />
                        <span
                          class="eui-textTruncate"
                        >
                          Create visualization
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class="euiFlexItem emotion-euiFlexItem-growZero"
                  >
                    <button
                      class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary-flush-left"
                      type="button"
                    >
                      <span
                        class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                      >
                        <span
                          color="inherit"
                          data-euiicon-type="folderOpen"
                        />
                        <span
                          class="eui-textTruncate euiButtonEmpty__text"
                        >
                          Add from library
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </main>
  </div>
</div>
`;

exports[`DashboardEmptyScreen renders correctly with readonly and edit mode 1`] = `
<div
  class="dshEmptyPromptParent"
>
  <div
    class="euiPageTemplate dshEmptyPromptPageTemplate emotion-euiPageOuter-row-grow"
    data-test-subj="dashboardEmptyReadOnly"
    style="min-block-size: 460px; padding-block-start: var(--euiFixedHeadersOffset, 0);"
  >
    <main
      class="emotion-euiPageInner"
      id="EuiPageTemplateInner_generated-id"
    >
      <section
        class="emotion-euiPageSection-grow-l-center-transparent"
      >
        <div
          class="emotion-euiPageSection__content-l-center"
        >
          <div
            class="euiPanel euiPanel--transparent euiEmptyPrompt dshEmptyWidgetContainer emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
          >
            <div
              class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
            >
              <div
                class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
              >
                <figure
                  class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
                >
                  <img
                    alt=""
                    class="euiImage emotion-euiImage-fullWidth"
                    src="/plugins/dashboard/assets/dashboards_light.svg"
                  />
                </figure>
              </div>
              <div
                class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
              >
                <h2
                  class="euiTitle emotion-euiTitle-xs"
                >
                  This dashboard is empty.
                </h2>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <div
                    class="euiText emotion-euiText-s-euiTextColor-subdued"
                  >
                    <span>
                      You need additional privileges to edit this dashboard.
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </main>
  </div>
</div>
`;

exports[`DashboardEmptyScreen renders correctly with readonly mode 1`] = `
<div
  class="dshEmptyPromptParent"
>
  <div
    class="euiPageTemplate dshEmptyPromptPageTemplate emotion-euiPageOuter-row-grow"
    data-test-subj="dashboardEmptyReadOnly"
    style="min-block-size: 460px; padding-block-start: var(--euiFixedHeadersOffset, 0);"
  >
    <main
      class="emotion-euiPageInner"
      id="EuiPageTemplateInner_generated-id"
    >
      <section
        class="emotion-euiPageSection-grow-l-center-transparent"
      >
        <div
          class="emotion-euiPageSection__content-l-center"
        >
          <div
            class="euiPanel euiPanel--transparent euiEmptyPrompt dshEmptyWidgetContainer emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
          >
            <div
              class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
            >
              <div
                class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
              >
                <figure
                  class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
                >
                  <img
                    alt=""
                    class="euiImage emotion-euiImage-fullWidth"
                    src="/plugins/dashboard/assets/dashboards_light.svg"
                  />
                </figure>
              </div>
              <div
                class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
              >
                <h2
                  class="euiTitle emotion-euiTitle-xs"
                >
                  This dashboard is empty.
                </h2>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <div
                    class="euiText emotion-euiText-s-euiTextColor-subdued"
                  >
                    <span>
                      You need additional privileges to edit this dashboard.
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </main>
  </div>
</div>
`;

exports[`DashboardEmptyScreen renders correctly with view mode 1`] = `
<div
  class="dshEmptyPromptParent"
>
  <div
    class="euiPageTemplate dshEmptyPromptPageTemplate emotion-euiPageOuter-row-grow"
    data-test-subj="dashboardEmptyReadWrite"
    style="min-block-size: 460px; padding-block-start: var(--euiFixedHeadersOffset, 0);"
  >
    <main
      class="emotion-euiPageInner"
      id="EuiPageTemplateInner_generated-id"
    >
      <section
        class="emotion-euiPageSection-grow-l-center-transparent"
      >
        <div
          class="emotion-euiPageSection__content-l-center"
        >
          <div
            class="euiPanel euiPanel--transparent euiEmptyPrompt dshEmptyWidgetContainer emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
          >
            <div
              class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
            >
              <div
                class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
              >
                <figure
                  class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
                >
                  <img
                    alt=""
                    class="euiImage emotion-euiImage-fullWidth"
                    src="/plugins/dashboard/assets/dashboards_light.svg"
                  />
                </figure>
              </div>
              <div
                class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
              >
                <h2
                  class="euiTitle emotion-euiTitle-xs"
                >
                  Add visualizations to your dashboard
                </h2>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <div
                    class="euiText emotion-euiText-s-euiTextColor-subdued"
                  >
                    <span>
                      Enter edit mode, and then start adding your visualizations.
                    </span>
                  </div>
                </div>
                <div
                  class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
                />
                <button
                  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
                  type="button"
                >
                  <span
                    class="emotion-euiButtonDisplayContent"
                  >
                    <span
                      color="inherit"
                      data-euiicon-type="pencil"
                    />
                    <span
                      class="eui-textTruncate"
                    >
                      Edit dashboard
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </section>
    </main>
  </div>
</div>
`;
